name:                code-art
version:             1.0.0.0
homepage:            https://github.com/silky/code-art
license:             BSD3
license-file:        LICENSE
author:              Noon van der Silk
maintainer:          noonsilk@gmail.com
copyright:           2015 Noon van der Silk
category:            Drawing
build-type:          Simple
cabal-version:       >=1.10

executable code-art
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Paths_code_art
  build-depends:         base >= 4.7 && < 5
                       , optparse-applicative
                       , implicit
                       , filemanip
                       , bytestring
                       , string-conv
